[package]
name = "scopelynx"
version = "0.3.2"
edition = "2024"
rust-version = "1.85"
description = "Scope-controlled, evidence-driven web vulnerability scanner"
license = "MIT"
readme = "README.md"
keywords = ["security", "scanner", "reconnaissance", "web", "cli"]
categories = ["command-line-utilities", "web-programming::http-client"]

[lib]
name = "scopelynx"
path = "src/lib.rs"

[[bin]]
name = "scopelynx"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.45", features = ["clock", "serde"] }
clap = { version = "4.5.61", features = ["derive", "env"] }
clap_complete = "4.6.7"
futures-util = "0.3.32"
hex = "0.4.3"
regex = "1.13.0"
reqwest = { version = "0.13.4", default-features = false, features = ["brotli", "charset", "deflate", "gzip", "http2", "rustls", "stream"] }
roxmltree = "0.21.1"
scraper = "0.27.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["fs", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
toml = "1.1.2+spec-1.1.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "json"] }
url = { version = "2.5.8", features = ["serde"] }

[dev-dependencies]
flate2 = "1.1.9"
proptest = "1.11.0"
tempfile = "3.27.0"

[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"

[profile.release]
codegen-units = 1
lto = "thin"
overflow-checks = true
panic = "abort"
strip = "symbols"
